cmake_minimum_required(VERSION 3.1.0)
project(main)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
if(WIN32)
    set(QtPath "D:/Qt/5.12.3/msvc2017_64")
    set(CMAKE_PREFIX_PATH ${QtPath})
endif(WIN32)
find_package(Qt5Widgets CONFIG REQUIRED)
find_package(Qt5Core REQUIRED)
find_package(Qt5Sql REQUIRED)
add_executable(main WIN32 main.cpp mainWindow.cpp mainWindow.h)
if (WIN32)
    configure_file(${QtPath}/bin/Qt5Widgetsd.dll ${CMAKE_CURRENT_BINARY_DIR}/Qt5Widgetsd.dll COPYONLY)
    configure_file(${QtPath}/bin/Qt5Cored.dll ${CMAKE_CURRENT_BINARY_DIR}/Qt5Cored.dll COPYONLY)
    configure_file(${QtPath}/bin/Qt5Guid.dll ${CMAKE_CURRENT_BINARY_DIR}/Qt5Guid.dll COPYONLY)
    configure_file(${QtPath}/bin/Qt5Sql.dll ${CMAKE_CURRENT_BINARY_DIR}/Qt5Sql.dll COPYONLY)
endif (WIN32)
target_link_libraries(main Qt5::Widgets Qt5::Core Qt5::Sql)